--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "license": "ISC",
     "dependencies": {
         "bcryptjs": "^2.4.3",
-        "cookie-parser": "^1.4.3",
-        "cookie-session": "^2.0.0-alpha.1",
-        "csurf": "^1.9.0",
+        "cookie-parser": "^1.4.5",
+        "cookie-session": "^2.0.0-rc.1",
+        "csurf": "^1.11.0",
         "express": "^4.14.0",
         "express-handlebars": "^3.0.0",
-        "helmet": "^3.22.0",
+        "helmet": "^3.23.3",
         "jest": "^24.5.0",
         "redis": "^2.6.2",
         "spiced-pg": "^1.0.4",
